# takdecomp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  a.out  build_log.txt  clang_tidy_output.txt  crc.txt  diff_filter.py  diff_write.py  gen_crc.py  gen_crc2.py  gen_crc3.py  gen_crc4.py  print_crc.c  run_tests.sh  test_music_24bit.tak  test_sine_16bit.tak
.github/workflows/: cmake.yml  matrix_test.yml
docs/: tak.md  tak_format_specification.md
reference/: takdecomp_ref
src/cli/: main.cpp  takc.cpp  takdec.cpp  takenc.cpp
src/core/: ape_tag.cpp  tak_crc.cpp  tak_deco_lib.cpp  tak_decoder.cpp  tak_decoder_decorrelate.cpp  tak_decoder_entropy.cpp  tak_decoder_subframe.cpp  tak_encoder.cpp  tak_encoder.cpp.bak  tak_encoder_bitstream.cpp  tak_encoder_decorrelate.cpp  tak_encoder_entropy.cpp  tak_encoder_filter.cpp  tak_encoder_md5.cpp  tak_encoder_subframe.cpp  tak_encoder_subframe.cpp.orig  tak_encoder_wav.cpp  test_crc.cpp
src/core/include/: tak_deco_lib.h
src/core/include/tak_decoder/: bitstream.hpp  constants.hpp  decoder.hpp  streaminfo.hpp  tak_crc.hpp
src/core/include/tak_encoder/: ape_tag.hpp  bitstream_writer.hpp  decorrelate.hpp  encoder.hpp  filter.hpp  md5.hpp  subframe.hpp  wav_reader.hpp
tests/: c_api_decoder.cpp  check  check.cpp  check_data_chunk  check_data_chunk.cpp  check_encode_residues.patch  check_samples.cpp  check_takenc.patch  check_xcodes.py  compare.py  create_wav.py  diff.txt  dump_wav.py  ffmpeg_short2.pcm  find_nonzero  find_nonzero.cpp  find_seq  find_seq.cpp  fix_encode_residues.patch  fix_scale_bits.patch  generate_test_wavs.py  our.hex  our.tak  our_fixed.tak  our_old.tak  our_orig.tak  our_p2.tak  our_short2.tak  our_wm0.tak  out.tak  parse_si2.py  patch.py  patch2.py  patch_entropy.py  patch_filter.py  patch_revert.py  patch_scale_bits.py  print_enc  print_enc.cpp  print_wav  (+14 more)
tests/debug_b/: my.tak  our.tak  our_frame.hex  our_mod.tak  our_mod2.tak  output.txt  print_encoder  print_encoder.c  print_is_last  print_is_last.c  print_lastframe  print_lastframe.c  print_meta  print_meta.c  print_streaminfo  print_streaminfo.c  print_type3  print_type3.c  standalone_ffmpeg  standalone_ffmpeg.c  standalone_parser  standalone_parser.c  test_align  test_align.c  test_av_crc_loop.c  test_av_crc_trace  test_av_crc_trace.c  test_avcrc  test_avcrc.c  test_broken_crc.c  test_bsw.cpp  test_bswap_loop  test_bswap_loop.c  test_compare_full  test_compare_full.c  test_crc  test_crc.c  test_decode  test_decode.c  test_decode_frames  (+74 more)
tests/output/: test_takdecomp.pcm
